--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="@drawable/button_redbackground_blackstroke"
-        android:drawableTop="@drawable/heart"
+        android:drawableTop="@drawable/owl"
         android:text="@string/dashboard_button_ontology"
         android:textColor="@color/colorWhite"
         android:textSize="14sp"
@@ -60,13 +60,13 @@
 
     <ImageView
         android:id="@+id/dashboard_logo"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="109dp"
+        android:layout_height="106dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="24dp"
         android:contentDescription="@string/dashboard_logo"
         app:layout_constraintStart_toEndOf="@+id/dashboard_Title"
         app:layout_constraintTop_toTopOf="parent"
@@ -101,7 +101,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:background="@drawable/button_redbackground_blackstroke"
-        android:drawableTop="@drawable/heart"
+        android:drawableTop="@drawable/calendar"
         android:text="@string/dashboard_button_calendar"
         android:textColor="@color/colorWhite"
         android:textSize="14sp"
@@ -124,7 +124,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:background="@drawable/button_redbackground_blackstroke"
-        android:drawableTop="@drawable/heart"
+        android:drawableTop="@drawable/goals"
         android:text="@string/dashboard_button_goals"
         android:textColor="@color/colorWhite"
         android:textSize="14sp"
