--- a/app/src/main/res/menu/goals_menu.xml
+++ b/app/src/main/res/menu/goals_menu.xml
@@ -2,6 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Subjects">
+
+    <item
+        android:id="@+id/subjects_completed"
+        android:orderInCategory="100"
+        android:title="Toggle as Completed"
+        app:showAsAction="never" />
     <item
         android:id="@+id/subjects_changeDetails"
         android:orderInCategory="100"
