--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -39,7 +39,7 @@
                 android:layout_marginStart="24dp"
 
                 android:layout_marginLeft="24dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="32dp"
@@ -49,9 +49,10 @@
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.454"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/create_disclaimer"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintVertical_bias="0.0" />
 
             <EditText
                 android:id="@+id/create_acc_fullName"
@@ -65,7 +66,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/create_fullname_hint"
                 android:inputType="text"
@@ -86,7 +87,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/create_birthday_hint"
                 android:inputType="date"
@@ -107,7 +108,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/create_email_hint"
                 android:inputType="textEmailAddress"
@@ -128,7 +129,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/create_address_hint"
                 android:inputType="textPostalAddress"
@@ -149,7 +150,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/create_password_hint1"
                 android:inputType="textPassword"
@@ -170,7 +171,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/create_password_hint2"
                 android:inputType="textPassword"
@@ -187,7 +188,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="50dp"
                 android:layout_marginLeft="50dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="50dp"
                 android:layout_marginRight="50dp"
                 android:gravity="center"
