--- a/app/src/main/res/layout/activity_enrolment_record.xml
+++ b/app/src/main/res/layout/activity_enrolment_record.xml
@@ -13,17 +13,18 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="331dp"
-        android:layout_height="212dp"
+        android:layout_width="344dp"
+        android:layout_height="220dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/textview_green_noborder" />
+        app:srcCompat="@drawable/background_fill_off_white" />
 
     <TextView
         android:id="@+id/enrolment_tv_percentage"
@@ -36,7 +37,7 @@
         android:layout_marginRight="8dp"
         android:gravity="center_vertical"
         android:text="@string/enrolment_avg"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorBlack"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
         app:layout_constraintStart_toEndOf="@+id/enrolment_tv_creditAvg"
@@ -46,12 +47,12 @@
         android:id="@+id/enrolment_tv_creditAvg"
         android:layout_width="175dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:gravity="center_vertical"
         android:text="@string/enrolment_boxTextOne"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorBlack"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
