--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="46dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:contentDescription="@string/logo_description"
@@ -47,8 +47,8 @@
 
             <EditText
                 android:id="@+id/login_email"
-                android:layout_width="320dp"
-                android:layout_height="64dp"
+                android:layout_width="340dp"
+                android:layout_height="68dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
@@ -57,7 +57,7 @@
                 android:layout_marginTop="96dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/login_prompt_email"
                 android:inputType="textEmailAddress"
@@ -114,17 +114,17 @@
 
             <EditText
                 android:id="@+id/login_password"
-                android:layout_width="320dp"
-                android:layout_height="64dp"
+                android:layout_width="340dp"
+                android:layout_height="68dp"
                 android:layout_below="@+id/login_email"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/login_prompt_password"
                 android:inputType="textPassword"
