--- a/app/src/main/res/layout/notification_popup.xml
+++ b/app/src/main/res/layout/notification_popup.xml
@@ -29,7 +29,7 @@
 
             <EditText
                 android:id="@+id/notification_Name"
-                android:layout_width="260dp"
+                android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="false"
@@ -39,18 +39,20 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/notification_name"
                 android:inputType="text"
                 android:textSize="@dimen/form_font_size"
+
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/subjects_heading" />
 
             <EditText
                 android:id="@+id/notification_frequency"
-                android:layout_width="260dp"
+                android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="false"
@@ -60,18 +62,20 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/notification_frequency"
                 android:inputType="text"
                 android:textSize="@dimen/form_font_size"
+
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/notification_Name" />
 
             <EditText
                 android:id="@+id/notification_endDate"
-                android:layout_width="260dp"
+                android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="false"
@@ -81,18 +85,20 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/notification_endDate"
                 android:inputType="date"
                 android:textSize="@dimen/form_font_size"
+
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/notification_startDate" />
 
             <EditText
                 android:id="@+id/notification_startDate"
-                android:layout_width="260dp"
+                android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="false"
@@ -102,18 +108,20 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/notification_startDate"
                 android:inputType="date"
                 android:textSize="@dimen/form_font_size"
+
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/notification_frequency" />
 
             <EditText
                 android:id="@+id/notification_msg"
-                android:layout_width="260dp"
+                android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="false"
@@ -123,11 +131,13 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/textview_border"
+                android:background="@android:drawable/dialog_holo_light_frame"
                 android:ems="10"
                 android:hint="@string/notification_msg"
                 android:inputType="text"
                 android:textSize="@dimen/form_font_size"
+
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/notification_endDate" />
@@ -135,20 +145,21 @@
             <Button
                 android:id="@+id/subjects_btn_save"
                 android:layout_width="100dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="60dp"
                 android:layout_marginLeft="60dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/textview_green_noborder"
                 android:text="@string/notification_btn_save"
                 android:textColor="@color/colorWhite"
+
                 app:layout_constraintStart_toEndOf="@+id/subjects_btn_close"
                 app:layout_constraintTop_toBottomOf="@+id/notification_msg" />
 
             <Button
                 android:id="@+id/subjects_btn_close"
                 android:layout_width="100dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="48dp"
                 android:layout_marginLeft="48dp"
                 android:layout_marginTop="32dp"
@@ -157,6 +168,7 @@
                 android:background="@drawable/textview_red_noborder"
                 android:text="@string/notification_btn_close"
                 android:textColor="@color/colorWhite"
+
                 app:layout_constraintEnd_toStartOf="@+id/subjects_btn_save"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/notification_msg" />
